--- a/wiki/LoggingFrameworks.wiki
+++ b/wiki/LoggingFrameworks.wiki
@@ -285,7 +285,7 @@ Take Jetty for example, which has an internal logging implementation unrelated t
 
 With multiple applications deployed inside Jetty, or any servlet container, logging can get a bit convoluted. In [http://code.google.com/p/redbox-mint/ Mint] for example, we have a '`/solr`' context deployed for The Fascinator, and a '`/geonames`' context deployed for [http://code.google.com/p/solr-geonames/ geo-spatial lookups]. This second context is running its own embedded Solr index, causing a mess if you are trying to separate them via logging.
 
-Jetty and Logback do have some solutions, using [http://logback.qos.ch/manual/contextSelector.html JNDI and Context Selectors], which I tinkered with for a while. The problem is that to implement them completely you have to modify the '`web.xml`' file for each context, which is somewhat 'hacky' again. Remember that we are deploying this server from a Maven build script, not your our own hacked repository of JARs/WARs.
+Jetty and Logback do have some solutions, using [http://logback.qos.ch/manual/contextSelector.html JNDI and Context Selectors], which I tinkered with for a while. The problem is that to implement them completely you have to modify the '`web.xml`' file for each context, which is somewhat 'hacky' again. Remember that we are deploying this server from a Maven build script, not from our own hacked repository of JARs/WARs.
 
 I suspect there is solution here, but as yet have not had to to get all the planets to align. Ideally I like a programmatic way of setting '`web.xml`' values, or anything similar, so that JNDI and '`logback-access`' can see them. This would allow me finer grained control over logging for each context. For now '`/solr`' and '`/geonames`' log to the same file, and on !ReDBox (which doesn't have '`/geonames`') the same configuration generates no Solr logs at all... go figure.
 
