Edited wiki page LoggingFrameworks through web user interface.

--- a/wiki/LoggingFrameworks.wiki
+++ b/wiki/LoggingFrameworks.wiki
@@ -287,6 +287,6 @@ With multiple applications deployed inside Jetty, or any servlet container, logg
 
 Jetty and Logback do have some solutions, using [http://logback.qos.ch/manual/contextSelector.html JNDI and Context Selectors], which I tinkered with for a while. The problem is that to implement them completely you have to modify the '`web.xml`' file for each context, which is somewhat 'hacky' again. Remember that we are deploying this server from a Maven build script, not from our own hacked repository of JARs/WARs.
 
-I suspect there is solution here, but as yet have not had to to get all the planets to align. Ideally I like a programmatic way of setting '`web.xml`' values, or anything similar, so that JNDI and '`logback-access`' can see them. This would allow me finer grained control over logging for each context. For now '`/solr`' and '`/geonames`' log to the same file, and on !ReDBox (which doesn't have '`/geonames`') the same configuration generates no Solr logs at all... go figure.
+I suspect there is a solution here, but as yet have not had time to get all the planets to align. Ideally I would like a programmatic way of setting '`web.xml`' values, or anything similar, so that JNDI and '`logback-access`' can see them. This would allow me finer grained control over logging for each context. For now '`/solr`' and '`/geonames`' log to the same file, and on !ReDBox (which doesn't have '`/geonames`') the same configuration generates no Solr logs at all... go figure.
 
 I'd also like to get Jetty shifted to '`logback-access`', but this is a minor annoyance. Separate or not, Jetty's logging works well and lives peacefully alongside the core Fascinator logs.
