Edited wiki page LoggingFrameworks through web user interface.

--- a/wiki/LoggingFrameworks.wiki
+++ b/wiki/LoggingFrameworks.wiki
@@ -8,7 +8,7 @@ Some of the 'opinions' below are unsupported by references, but represent a cons
 First, some brief information about the libraries in question:
  * [http://logging.apache.org/log4j/1.2/ Log4j]: Ye 'olde popular logging framework. Historical predecessor to logback, but many libraries still use it, including of course, older versions of libraries that have now migrated away.
  * [http://commons.apache.org/logging/ JCL]: Jakarta Commons Logging, also known as Apache Commons Logging, or more frequently, just 'commons logging' or JCL. This is a wrapper for other frameworks, such as log4j. It has mostly (broad generalisation) fallen out of favour amongst developers to make way for the more modern SLF4J. Again though, it is still in fairly broad use amongst code libraries.
- * [http://www.slf4j.org/ SLF4J]: The Simple Logging Facade for Java; similar to JCL it is a wrapper for other logging implementations, although the project does make available several viable implementations, such as the core JDK implementation and several bridges (detailed later). It is very popular, and considered to be more efficient and robust then most alternatives.
+ * [http://www.slf4j.org/ SLF4J]: The Simple Logging Facade for Java; similar to JCL it is a wrapper for other logging implementations, although it was purpose built to be such, whereas JCL just [http://radio-weblogs.com/0122027/2003/08/15.html ended up] becoming a pseudo-framework. The project does make available several viable implementations, such as the core JDK implementation and several bridges (detailed later). It is very popular, and considered to be more efficient and robust then most alternatives.
  * [http://logback.qos.ch/ Logback]: is the successor to log4j and is the native implementation of SLF4J (all three projects have the [http://en.wikipedia.org/wiki/Ceki_G%C3%BClc%C3%BC same founder]). This is The Fascinator's logging implementation of choice.
 
 == All Roads Lead to Logback ==
