--- a/wiki/PreReleaseNotes.wiki
+++ b/wiki/PreReleaseNotes.wiki
@@ -8,6 +8,7 @@ A textual summary/description of the release goes here... currently just bug fix
 
 *Release Notes:*
 
- * Work on logging frameworks to address bugs caused by Solr version upgrade.
+ * Improved several contrib plugins to allow the [https://redbox-build.cqu.edu.au/jenkins/ build server] to do automated documentation builds now that they are separated from the core Fascinator POMs.
+ * Work on [LoggingFrameworks logging frameworks] to address bugs caused by Solr version upgrade.
  * Minor improvement to File System Storage Plugin when it finds objects without an 'objectId' property. Needs further work (issue #48), this 'fix' is just a workaround.
  * Implement [BackupMigrationToolPlanning Stage 1 of re-index/restore] tool. (issue #46)
