--- a/wiki/PreReleaseNotes.wiki
+++ b/wiki/PreReleaseNotes.wiki
@@ -6,7 +6,7 @@ A textual summary/description of the release goes here... currently just bug fix
 
 *Release Date:* TBA
 
-*Release Notes:*
+*Release Notes:* (so far... this version is unreleased)
 
  * Improved several contrib plugins to allow the [https://redbox-build.cqu.edu.au/jenkins/ build server] to do automated documentation builds now that they are separated from the core Fascinator POMs.
  * Work on [LoggingFrameworks logging frameworks] to address bugs caused by Solr version upgrade.
