--- a/wiki/PreReleaseNotes.wiki
+++ b/wiki/PreReleaseNotes.wiki
@@ -8,8 +8,10 @@ A textual summary/description of the release goes here... currently just bug fix
 
 *Release Notes:* (so far... this version is unreleased)
 
+ * Some work-around fixes to OAI-PMH harvest problems added to sample rules file. More work is required in the harvester (issue #49).
  * Fixed threading bug in file lock unit test. (issue #28)
  * Improved several contrib plugins to allow the [https://redbox-build.cqu.edu.au/jenkins/ build server] to do automated documentation builds now that they are separated from the core Fascinator POMs.
  * Work on [LoggingFrameworks logging frameworks] to address bugs caused by Solr version upgrade.
+ * Solr Indexer now binds access to the '`log`' object to the Jython engine, making it accessible inside of rules files. (issue #43)
  * Minor improvement to File System Storage Plugin when it finds objects without an 'objectId' property. Needs further work (issue #48), this 'fix' is just a workaround.
  * Implement [BackupMigrationToolPlanning Stage 1 of re-index/restore] tool. (issue #46)
