--- a/wiki/PreReleaseNotes.wiki
+++ b/wiki/PreReleaseNotes.wiki
@@ -2,7 +2,9 @@
 
 = Next Version: v1.0.4 =
 
-A textual summary/description of the release goes here... currently just bug fixes/tweaks.
+~~A textual summary/description of the release goes here... currently just bug fixes/tweaks.~~
+
+This release focuses on significant updates to the [LoggingFrameworks logging framework] 'plumbing' throughout the platform. There are also a number of bug fixes and the test release of a new restoration process.
 
 *Release Date:* TBA... see [ReleaseHistory earlier releases].
 
