--- a/wiki/PreReleaseNotes.wiki
+++ b/wiki/PreReleaseNotes.wiki
@@ -1,22 +1,11 @@
 #summary Running notes on the next release currently under development.
 
-= Next Version: v1.0.4 =
+= Next Version: v1.0.5 =
 
-~~A textual summary/description of the release goes here... currently just bug fixes/tweaks.~~
-
-This release focuses on significant updates to the [LoggingFrameworks logging framework] 'plumbing' throughout the platform. There are also a number of bug fixes and the test release of a new restoration process.
+A textual summary/description of the release goes here... currently just bug fixes/tweaks.
 
 *Release Date:* TBA... see [ReleaseHistory earlier releases].
 
 *Release Notes:* (so far... this version is unreleased)
 
- * Work on [LoggingFrameworks logging frameworks] to address bugs caused by Solr version upgrade.
- * Solr Indexer now binds access to the '`log`' object to the Jython engine, making it accessible inside of rules files. (issue #43)
- * Implement [BackupMigrationToolPlanning Stage 1 of re-index/restore] tool. (issue #46)
- * Minor improvement to File System Storage Plugin when it finds objects without an 'objectId' property. Needs further work (issue #48), this 'fix' is just a workaround.
- * !FileSystemHarvester's new database cache has been added to developer purge scripts. (issue #6)
- * Fixed an occasional number parsing error in House Keeping. (issue #8).
- * Some work-around fixes to OAI-PMH harvest problems added to sample rules file. More work is required in the harvester (issue #49).
- * Fixed threading bug in file lock unit test. (issue #28)
- * Improved several contrib plugins to allow the [https://redbox-build.cqu.edu.au/jenkins/ build server] to do automated documentation builds now that they are separated from the core Fascinator POMs.
- * Fixed Atom Feed bugs resulting from code being out-of-date. (issue #50)
+ * ...
