--- a/wiki/PreReleaseNotes.wiki
+++ b/wiki/PreReleaseNotes.wiki
@@ -11,5 +11,6 @@ A textual summary/description of the release goes here... currently just bug fix
  * Stage 2 [BackupMigrationToolPlanning restore tool] implemented (issue #10), allowing harvest file OID remapping and inclusion of custom migration scripts. (issue #57) Migration from one host to another should now be possible.
  * Added new 'History' screen to display Solr log for object. r3071
  * Solr logging configuration fixed. (issue #58)
+ * Numerous minor fixes to 'about' pages. (issue #54, issue #55, issue #56)
  * Object deletion is more robust when small sections error. r3064
  * ...
