--- a/wiki/PreReleaseNotes.wiki
+++ b/wiki/PreReleaseNotes.wiki
@@ -13,4 +13,5 @@ A textual summary/description of the release goes here... currently just bug fix
  * Solr logging configuration fixed. (issue #58)
  * Numerous minor fixes to 'about' pages. (issue #54, issue #55, issue #56)
  * Object deletion is more robust when small sections error. r3064
+ * Some timing issues and bugs resolved in !SubscriberQueueConsumer. r3080
  * ...
