--- a/wiki/PreReleaseNotes.wiki
+++ b/wiki/PreReleaseNotes.wiki
@@ -18,6 +18,6 @@ A textual summary/description of the release goes here... currently just bug fix
    * Some core messaging features previously in the Portal having been centralised to the Core Library. It is now possible to start AMQ without a Portal from inside unit tests.
    * Message queue bootup delays at system start are no longer hardcoded. Servers with slow Solr boot times can accommodate.
    * Some new experimental work on transaction management provides alternative to traditional tool chains. A new '`TransactionManager`' plugin supports this.
-   * '`MessagingServices`' should handle a lot of edge case errors to do with abnormally terminating sessions. It is also quite trivial now to send JMS messages to other systems as well. Both of these improvements are very new and need to be put through their paces.
+   * '`MessagingServices`' should handle a lot of edge case errors to do with abnormally terminating sessions. It is also quite trivial now to send JMS messages to other systems as well.
    * Message statistics can now be routed by configuration, and disabled if desired.
  * Objects posting messages to the tool chain can now be configured regarding the specific queue to use. r3085
