--- a/wiki/PreReleaseNotes.wiki
+++ b/wiki/PreReleaseNotes.wiki
@@ -1,13 +1,11 @@
 #summary Running notes on the next release currently under development.
 
-= Next Version: v1.0.6 =
+= Next Version: v1.0.7 =
 
-A textual summary/description of the release goes here... currently just bug fixes/tweaks.
+A textual summary/description of the release goes here...
 
 *Release Date:* TBA... see [ReleaseHistory earlier releases].
 
 *Release Notes:* (so far... this version is unreleased)
 
- * Fixed bug in OAI-PMH Harvester's sample rules file, related to issue #49. r3122
- * A new 'Delete by Query' action has been added to the portal, allowing admins to script mass deletions somewhat easier. It is coded to run in 'test' mode only until edited by an admin... for safety reasons. r3123
- * !JsonVelocity contrib plugin updated to provide access to system configuration inside templates. r3126
+ * ...
