--- a/wiki/PreReleaseNotes.wiki
+++ b/wiki/PreReleaseNotes.wiki
@@ -9,3 +9,4 @@ A textual summary/description of the release goes here...
 *Release Notes:* (so far... this version is unreleased)
 
  * A typo in drop-down widgets broke functionality. r3191
+ * Fixed critical bug in OAI-PMH Harvester on 'delete' records. issue #63, r3194
