--- a/wiki/PreReleaseNotes.wiki
+++ b/wiki/PreReleaseNotes.wiki
@@ -8,4 +8,4 @@ A textual summary/description of the release goes here...
 
 *Release Notes:* (so far... this version is unreleased)
 
- * 
+ * Caching configuration for 'off' profile fixed. issue #65, r3218
