--- a/wiki/PreReleaseNotes.wiki
+++ b/wiki/PreReleaseNotes.wiki
@@ -9,3 +9,4 @@ A textual summary/description of the release goes here...
 *Release Notes:* (so far... this version is unreleased)
 
  * Caching configuration for 'off' profile fixed. issue #65, r3218
+ * Some additional logging from the search script when purging the session of cached search filters. r3220
