--- a/wiki/PreReleaseNotes.wiki
+++ b/wiki/PreReleaseNotes.wiki
@@ -10,3 +10,4 @@ A textual summary/description of the release goes here...
 
  * Caching configuration for 'off' profile fixed. issue #65, r3218
  * Some additional logging from the search script when purging the session of cached search filters. r3220
+ * Added improved Solr field for sorting alpha numeric strings. r3222
