--- a/wiki/PreReleaseNotes.wiki
+++ b/wiki/PreReleaseNotes.wiki
@@ -12,5 +12,4 @@ A textual summary/description of the release goes here...
  * Some additional logging from the search script when purging the session of cached search filters. r3220
  * Added improved Solr field for sorting alpha numeric strings. r3222
  * The last page of result in the OAI-PMH feed no longer sends a resumption token. issue #11, r3224
- * Bug fix for property substitution when retrieving lists of Strings
-from Json Library. r3226
+ * Bug fix for property substitution when retrieving lists of Strings from Json Library. r3226
