Edited wiki page MavenDeployment through web user interface.

--- a/wiki/MavenDeployment.wiki
+++ b/wiki/MavenDeployment.wiki
@@ -1,4 +1,4 @@
-#summary Instructions and information on deploying Maven artifacts.
+#summary Moved to https://sites.google.com/site/fascinatorhome/home/documentation/technical/documents/deploying-to-maven
 #labels maven
 = Introduction =
 
